--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -7,5 +7,8 @@
     <extensions defaultExtensionNs="com.intellij">
         <fileType name="TypeSpec" implementationClass="typespec.TsFileType" fieldName="INSTANCE" language="TypeSpec" extensions="tsp"/>
         <lang.parserDefinition language="TypeSpec" implementationClass="typespec.TsParser"/>
+        <lang.syntaxHighlighterFactory language="TypeSpec" implementationClass="typespec.TsSyntaxHighlighterFactory"/>
+        <additionalTextAttributes scheme="Darcula" file="colors/GlslColorsConfiguration.xml"/>
+        <annotator language="TypeSpec" implementationClass="typespec.TsHighlightAnnotator"/>
     </extensions>
 </idea-plugin>
