--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,11 +5,11 @@
 
     <depends>com.intellij.modules.platform</depends>
     <extensions defaultExtensionNs="com.intellij">
-        <fileType name="TypeSpec" implementationClass="typespec.TsFileType" fieldName="INSTANCE" language="TypeSpec" extensions="tsp"/>
-        <lang.parserDefinition language="TypeSpec" implementationClass="typespec.TsParser"/>
-        <lang.syntaxHighlighterFactory language="TypeSpec" implementationClass="typespec.TsSyntaxHighlighterFactory"/>
+        <fileType name="TypeSpec" implementationClass="typespec.language.TsFileType" fieldName="INSTANCE" language="TypeSpec" extensions="tsp"/>
+        <lang.parserDefinition language="TypeSpec" implementationClass="typespec.language.TsParser"/>
+        <lang.syntaxHighlighterFactory language="TypeSpec" implementationClass="typespec.highlighting.TsSyntaxHighlighterFactory"/>
         <additionalTextAttributes scheme="Darcula" file="colors/GlslColorsConfiguration.xml"/>
-        <annotator language="TypeSpec" implementationClass="typespec.TsHighlightAnnotator"/>
-        <colorSettingsPage implementation="typespec.TsColorSettings"/>
+        <annotator language="TypeSpec" implementationClass="typespec.highlighting.TsHighlightAnnotator"/>
+        <colorSettingsPage implementation="typespec.highlighting.TsColorSettings"/>
     </extensions>
 </idea-plugin>
