--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,5 +14,6 @@
         <lang.braceMatcher language="TypeSpec" implementationClass="typespec.editor.TsBraceMatcher"/>
         <lang.commenter language="TypeSpec" implementationClass="typespec.editor.TsCommenter"/>
         <typedHandler implementation="typespec.editor.TsTypedHandler"/>
+        <psi.referenceContributor language="TypeSpec" implementation="typespec.psi.TsReferenceContributor"/>
     </extensions>
 </idea-plugin>
