Added spell checking and upgraded gradle intellij version

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -18,6 +18,7 @@
         <psi.referenceContributor language="TypeSpec" implementation="typespec.psi.TsReferenceContributor"/>
         <lang.findUsagesProvider language="TypeSpec" implementationClass="typespec.psi.TsFindUsage"/>
         <completion.contributor language="TypeSpec" implementationClass="typespec.completion.TsCompletionContributor"/>
+        <spellchecker.support language="TypeSpec" implementationClass="typespec.editor.TsSpellChecking"/>
     </extensions>
 
     <actions>
